# mezon_knowledge_hub

./: .gitignore  API_CONTRACT.md  README.md  docker-compose.yml  schema.sql
backend/: Dockerfile  alembic.toml  pyproject.toml  requirements.txt  restructure.py  scratch_test_ws.py
backend/app/: main.py
backend/app/api/mezon/: client.py  commands.py
backend/app/api/v1/endpoints/: ai.py  files.py  folders.py
backend/app/bot/: runner.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: folder.py
backend/app/models/: knowledge_file.py  processing_job.py
backend/app/schemas/: common.py  folder.py
backend/app/services/: ai_agent.py  db_manager.py  scrapers.py  search_engine.py
backend/scripts/: prestart.sh
bot/: Dockerfile  main.py  requirements.txt
bot/app/: main.py
bot/app/api/v1/: router.py
bot/app/core/: deps.py
bot/app/crud/: file.py
bot/app/models/: folder.py  user.py
bot/app/schemas/: auth.py  file.py
bot/app/services/: mezon_bot.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: error.tsx  layout.tsx  loading.tsx
frontend/src/app/dashboard/: error.tsx  (+2 more)
frontend/src/styles/: tokens.css
web-dashboard/: Dockerfile  package-lock.json  package.json
web-dashboard/src/app/: error.js  globals.css  loading.js  page.js
web-dashboard/src/components/: FileViewer.js  Sidebar.js
web-dashboard/src/hooks/: useKnowledgeHub.js
web-dashboard/src/services/: ai.service.js  auth.service.js  axios.instance.js  file.service.js  folder.service.js
web-dashboard/src/store/: useThemeStore.js
(+30 files in other folders)
