[tool.poetry]
name = "mezon-knowledge-hub-backend"
version = "0.1.0"
description = "Backend API cho Mezon Knowledge Hub"
authors = ["Admin"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
sqlmodel = ">=0.0.19"
alembic = ">=1.13.0"
pymysql = ">=1.1.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.9"
pydantic-settings = ">=2.3.0"
google-generativeai = ">=0.8.0"
youtube-transcript-api = ">=0.6.0"
beautifulsoup4 = ">=4.12.0"
pdfplumber = ">=0.11.0"
python-docx = ">=1.1.0"
httpx = ">=0.27.0"
websockets = ">=12.0"
cryptography = ">=42.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
